Amélioration de la doc généré par swagger
